--- a/.github/workflows/update-languages.yml
+++ b/.github/workflows/update-languages.yml
@@ -3,7 +3,7 @@ name: Update Language Stats
 on:
   workflow_dispatch:
   schedule:
-    - cron: '17 3 * * *'  # roda diariamente às 03:17 UTC
+    - cron: '30 3 * * *'
 
 permissions:
   contents: write
@@ -12,36 +12,23 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-
-      - name: Install deps
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests
-
-      - name: Update languages section
+      - run: pip install requests
+      - name: Update languages
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT_REPO }} # seu token pessoal (Settings → Secrets → Actions)
           USERNAME: "emanuelleLS"
-          EXCLUDE_FORKS: "true"     # altere para "false" se quiser incluir forks
-          TOP_N: "8"
-        run: |
-          python scripts/update_languages.py
-
-      - name: Commit changes if any
-        run: |
+        run: python scripts/update_languages.py
+      - run: |
           if [[ -n "$(git status --porcelain)" ]]; then
-            git config user.name  "github-actions[bot]"
+            git config user.name "github-actions[bot]"
             git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
             git add README.md
             git commit -m "chore(readme): atualiza estatísticas de linguagens"
             git push
           else
-            echo "Sem alterações."
+            echo "Sem mudanças."
           fi
